@@ -7,3 +7,6 @@
 [submodule "libs/requirejs"]
 	path = libs/requirejs
 	url = git://github.com/jrburke/requirejs.git
+[submodule "libs/r.js"]
+	path = libs/r.js
+	url = git://github.com/jrburke/r.js.git
